--- a/02-bases-vue/index.html
+++ b/02-bases-vue/index.html
@@ -9,11 +9,17 @@
 <body>
 <!-- Control absoluto VUE -->
   <div id="myApp">
-    <h1>{{quote}}</h1> 
-    <blockquote>{{author}}</blockquote>
-    <button v-on:click="changeQuote">
-      Change quote
-    </button>
+    <h1>Batman Quotes <small>{{newQuote}}</small></h1>
+    <input type="text" v-model="newQuote" v-on:keypress.enter="addQuote">
+    <hr>
+      <ul>
+        <li v-for="({quote, author}, index) in quotes">
+          <span>{{index + 1}} {{ quote }}</span>
+          <!-- <blockquote v-if="author">{{ author }}</blockquote> -->
+          <blockquote v-show="author">{{ author }}</blockquote>
+        </li>
+      </ul>
+    {{ quotes }}
   </div>  
   <script src="app.js"></script>
 </body>
